[package]
name = "egui-widget-theming"
version = "0.1.0"
authors = ["Rob Ward <rob@resona.nz>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.82"
repository = "https://github.com/resonanz/egui-widget-theming"
keywords = ["egui", "eframe", "ui", "themes", "widget"]

[dependencies]
egui = "0.29.1"
