[package]
name = "egui-themes"
version = "0.1.1"
authors = ["Rob Ward <rob@resona.nz>"]
edition = "2021"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.82"
repository = "https://github.com/resonanz/egui-themes"
keywords = ["eframe", "egui", "ui", "themes"]
description = "Super-simple color theming for egui."
license = "MIT"
documentation = "https://docs.rs/egui-themes"

[dependencies]
egui = "0.29.1"
